@@ -23,7 +23,7 @@ blockquote{color:#666;font-style:italic;margin:1.5em;}
 em,dfn{font-style:italic;background:#ffc;}
 sup,sub{line-height:0;}
 abbr,acronym{border-bottom:1px dotted #666;}
-address{margin-top:1.5em;font-style:italic;}
+address{font-style:italic;margin:0 0 1.5em;}
 pre,code{white-space:pre;margin:1.5em 0;}
 pre,code,tt{font:1em 'andale mono', monotype.com, 'lucida console', monospace;line-height:1.5;}
 tt{display:block;line-height:1.5;margin:1.5em 0;}
